# license-plate-blur

./: .gitignore  pyproject.toml
.github/workflows/: build-apk.yml  build-flutter-apk.yml
android_app/: buildozer.spec  main.py
android_app/p4a_recipes/numpy/: __init__.py
android_app/p4a_recipes/opencv/: __init__.py
android_app/p4a_recipes/opencv/patches/: p4a_build.patch
flutter_app/: pubspec.yaml
flutter_app/lib/: main.dart
flutter_app/lib/screens/: home_screen.dart
flutter_app/lib/services/: image_service.dart  onnx_service.dart
versions/v1.0/: gui.py
versions/v1.1/: blur.py  gui.py
